# kaji-starter-python

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.ja.md  README.md  pyproject.toml
.agents/skills/: i-dev-final-check  i-doc-final-check  i-pr  issue-fix-ready  issue-review-ready  pr-fix  pr-verify  series-create
.claude/agents/: kaji-code-reviewer.md
.claude/skills/_shared/: critical-decision-checklist.md  promote-design.md  report-unrelated-issues.md  worktree-resolve.md
.claude/skills/baseline-precheck/: SKILL.md
.claude/skills/grill-me/: SKILL.md
.claude/skills/i-dev-final-check/: SKILL.md
.claude/skills/i-doc-final-check/: SKILL.md
.claude/skills/i-doc-fix/: SKILL.md
.claude/skills/i-doc-review/: SKILL.md
.claude/skills/i-doc-update/: SKILL.md
.claude/skills/i-doc-verify/: SKILL.md
.claude/skills/i-pr/: SKILL.md
.claude/skills/issue-close/: SKILL.md
.claude/skills/issue-create/: SKILL.md
.claude/skills/issue-design/: SKILL.md
.kaji/: config.toml
.kaji/wf/: dev-local.yaml  dev-thorough.yaml  dev.yaml  docs-local.yaml  docs.yaml
docs/: README.md
docs/dev/: baseline-check.md  change-types-and-gates.md  documentation_update_criteria.md  git-workflow.md  implement-quickref.md  kaji-workflow.md  shared_skill_rules.md  testing-convention.md  workflow_completion_criteria.md
docs/reference/: configuration.en.md  configuration.md  python-standards.en.md  python-standards.md
scripts/: check_doc_links.py  set_agent.py  setup_labels.sh
src/starter_app/: __init__.py
tests/: conftest.py  test_smoke.py
(+29 files in other folders)
